standalone/atlas-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas
  namespace: atlas
spec:
  selector:
    matchLabels: 
      app: atlas
  replicas: 1
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: atlas
    spec:
      containers:
      - name: atlas
        image: c2labs/atlasity:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: "/atlas/files"
            name: atlas-files 
      volumes:
      - name: atlas-files
        persistentVolumeClaim:
          claimName: atlas-files
