standalone/atlas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-service
  namespace: atlas
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: atlas
